--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ body {
 }
 
 
+
+
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
@@ -67,7 +69,8 @@ body {
   -webkit-transition: 0.2s linear;
   -o-transition: 0.2s linear;
   transition: 0.2s linear;
-  padding-bottom: 7px;
+  
+  padding-bottom: 5px;
   z-index: 999;
 }
 .header__active {
@@ -106,7 +109,7 @@ body {
 
 .header__link {
   font-size: 14px;
-  line-height: 17px;
+  line-height: 28px;
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
@@ -184,6 +187,11 @@ body {
   position: relative;
 }
 
+
+
+
+
+
 .intro__video-arrow {
   margin-right: 20px;
 }
@@ -248,6 +256,7 @@ body {
   line-height: 17px;
   text-transform: uppercase;
   color: #000000;
+  
 }
 .about__btn:hover {
   background: #000;
@@ -444,10 +453,7 @@ input.name::placeholder {
   margin-bottom: 80px;
 }
 
-.fancybox-bg {
-  background: #f6f6f6;
-  opacity: 0.93;
-}
+
 
 .fancybox-content {
   background: #ffc32d;
@@ -730,7 +736,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 273px;
+    max-height: 275px;
     width: auto;
     padding: 5px;
   }
@@ -751,7 +757,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 255px;
+    max-height: 258px;
     width: auto;
     padding: 5px;
   }
@@ -857,7 +863,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 215px;
+    max-height: 216px;
     width: auto;
     padding: 5px;
   }
@@ -873,7 +879,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 206px;
+    max-height: 207px;
     width: auto;
     padding: 5px;
   }
@@ -1045,7 +1051,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 164px;
+    max-height: 165px;
     width: auto;
     padding: 5px;
   }
@@ -1279,7 +1285,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 265px;
+    max-height: 266px;
     width: auto;
     padding: 5px;
   }
@@ -1582,7 +1588,7 @@ a.footer__social {
     padding: 5px;
   }
   .img-small {
-    max-height: 171px;
+    max-height: 172px;
     width: auto;
     padding: 5px;
   }
@@ -1633,11 +1639,90 @@ a.footer__social {
 }
 
 
+/* zoom popup */
+
+.mfp-bg{
+  background: #F6F6F6;
+opacity: 0.93;
+}
+
+
+#small-dialog {
+	background: #ffc32d;
+	padding: 20px 30px;
+	text-align: center;
+	max-width: 700px;
+	margin: 40px auto;
+	position: relative;
+}
+
+
+.hidden{
+  display: none;
+}
+
+
+.my-mfp-zoom-in .zoom-anim-dialog {
+	opacity: 0;
+
+	-webkit-transition: all 0.2s ease-in-out; 
+	-moz-transition: all 0.2s ease-in-out; 
+	-o-transition: all 0.2s ease-in-out; 
+	transition: all 0.2s ease-in-out; 
+
+
+
+	-webkit-transform: scale(0.8); 
+	-moz-transform: scale(0.8); 
+	-ms-transform: scale(0.8); 
+	-o-transform: scale(0.8); 
+	transform: scale(0.8); 
+}
+
+
+.my-mfp-zoom-in.mfp-ready .zoom-anim-dialog {
+	opacity: 1;
+
+	-webkit-transform: scale(1); 
+	-moz-transform: scale(1); 
+	-ms-transform: scale(1); 
+	-o-transform: scale(1); 
+	transform: scale(1); 
+}
+
+
+.my-mfp-zoom-in.mfp-removing .zoom-anim-dialog {
+	-webkit-transform: scale(0.8); 
+	-moz-transform: scale(0.8); 
+	-ms-transform: scale(0.8); 
+	-o-transform: scale(0.8); 
+	transform: scale(0.8); 
+
+	opacity: 0;
+}
+
+
+.my-mfp-zoom-in.mfp-bg {
+	opacity: 0;
+	-webkit-transition: opacity 0.3s ease-out; 
+	-moz-transition: opacity 0.3s ease-out; 
+	-o-transition: opacity 0.3s ease-out; 
+	transition: opacity 0.3s ease-out;
+}
+
+.my-mfp-zoom-in.mfp-ready.mfp-bg {
+	opacity: 0.8;
+}
+
+.my-mfp-zoom-in.mfp-removing.mfp-bg {
+	opacity: 0;
+}
+
 
 
 
 /* swipe */
-p{
+/* p{
   
 }
 
@@ -1716,9 +1801,7 @@ figure a {
   header h1 {
     float: left;
   }
-  header a {
-    float: right;
-  }
+  
   .demo-content {
     padding: 10px;
   }
@@ -1735,3 +1818,8 @@ figure a {
     width: 50%;
   }
 }
+ */
+
+
+
+
